scrollbar jump fix

--- a/css/app.css
+++ b/css/app.css
@@ -85,5 +85,7 @@ form input {
   margin: 5px;
 }
 
-
+html {
+	overflow-y: scroll; 
+}
 
